# KiachaOs

./: AGI_IMPLEMENTATION_COMPLETE.md  AGI_INTEGRATION_GUIDE.md  BRAIN_FUNCTIONS_SPEC.md  BRIDGE_COMPLETION.md  CI_PIPELINE_SUMMARY.md  COGNITIVE_SYSTEM.md  DELIVERY_MANIFEST.md  DELIVERY_REPORT_3D_ENGINE.txt  DEVELOPMENT.md  EXECUTIVE_SUMMARY.md  FINAL_SUMMARY.txt  FRONTEND_FUNCTIONS_SPEC.md  GITHUB_UPLOAD_COMPLETE.txt  INDEX.txt  INSTALLATION.md  KERNEL_FUNCTIONS_SPEC.md  KIACHA_OS_SYSTEM.md  LANGUAGES.md  Makefile  NATIVE_APPS_SUMMARY.txt  PHASE_5_3D_ENGINE_DELIVERY.md  PHASE_5_DELIVERY_COMPLETE.md  PORTABLE_EXE_BUILD_GUIDE.md  PORTABLE_EXE_IMPLEMENTATION.md  PROJECT_STATUS.md  PROJECT_STATUS_COGNITIVE.md  PROJECT_SUMMARY.txt  QUICK_REFERENCE.txt  README.md  ROADMAP_SUPREMO.md  SECURITY.md  START.txt  START_HERE.txt  build_exe.bat  docker-compose.yml  embed_assets.py  package-lock.json  package.json  tauri.conf.json
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-wasm.yml  build.yml  ci-build.yml  ci.yml  image-build.yml  sign-and-release.yml  update-repo-metadata.yml
artifacts/ai/: kiacha-brain  kiacha-daemon  kiacha-network  kiacha-secure  kiacha-vision  kiacha-voice
artifacts/kernel/: System.map  kernel.elf  vmlinuz
artifacts/modules/: fs.ext2.ko  input.ko  net.ko  video.ko
artifacts/rootfs/sbin/: init
backend/: Dockerfile  package.json
backend/src/: index.ts
backend/src/routes/: api.ts  auth.ts  memory.ts  ota.ts
backend/src/services/: chroma.ts  llama.ts  piper.ts  whisper.ts
backend/src/utils/: logger.ts  system.ts
docs/: CERTIFICATION_PLAN.md  REQUIREMENTS_GRAPH.md  ROADMAP_MILSPEC.md  THREAT_MODEL.md
docs/military/: architecture.md  epics.md  fallbacks.md  ia_defensive.md  index.md  issues_payload.json  logs_and_audit.md  milestones.md  sops.md  tasks_m0.md  tasks_m1.md  tasks_m2.md  tasks_m3.md  tasks_m4.md  tasks_m5.md  tasks_m6.md  tasks_m7.md
firmware/: CMakeLists.txt
firmware/src/: audio.cpp  audio.hpp  camera.cpp  camera.hpp  i2c.cpp  i2c.hpp  led.cpp  led.hpp  main.cpp  temp.cpp  temp.hpp  updater.cpp  updater.hpp
frontend/: .eslintignore  .eslintrc.json  .stylelintignore  Dockerfile  index.html  package.json  tailwind.config.js
frontend/public/wasm/: test_runner.html
frontend/src/: App.tsx  index.css  store.ts
frontend/src/components/: Dashboard3D.tsx  MemoryOrb.tsx  RadialWheel.tsx  VisionWidget.tsx  VoiceWidget.tsx
frontend/src/hooks/: useGesture.ts  usePiper.ts  useWebRTC.ts  useWhisper.ts
frontend/src/lib/: onnx.ts  utils.ts
frontend/src/workers/: piper.worker.ts  whisper.worker.ts
frontend/wasm/: reasoning.cpp
frontend/wasm/test/: validate_wasm_browser.js
kiacha-apps/automations/components/: AutomationsBuilder.tsx
kiacha-apps/studio/components/: KiachaStudio.tsx
kiacha-brain/: README.md  package.json
kiacha-brain/modules/: piper.py  vision.py  whisper.py
kiacha-brain/src/: core-brain.ts  index.ts
kiacha-brain/src/megafunctions/: apps-native-block-e.ts  intent-router.ts  memory-core.ts  system-status.ts
kiacha-brain/src/modules/: autobiographical-memory.ts  automations.ts  dream-mode.ts  megafunction-core.ts  perception.py  visual-memory.ts  voice-persona.ts
kiacha-brain/src/routes/: events.ts  memory.ts  reasoning.ts  tools.ts
kiacha-brain/src/types/: events.ts  memory.ts  reasoning.ts  tools.ts
kiacha-kernel/: Cargo.toml
kiacha-kernel/src/: ai_neural_engine.rs  ai_security_layer.rs  ipc.rs  kernel.rs  main.rs  permissions.rs  resources.rs  security.rs  wasm_runtime.rs
kiacha3d/: API_REFERENCE.md  ARCHITECTURE.md  BUILD.md  CMakeLists.txt  README.md  TESTING.md  requirements.txt  setup.sh
kiacha3d/api/: kiacha3d_api.py  kiacha3d_commands.json
kiacha3d/core/: object_loader.cpp  object_loader.hpp  scene_manager.cpp  scene_manager.hpp
kiacha3d/engine/: renderer.cpp  renderer.hpp  vulkan_backend.cpp  vulkan_backend.hpp
kiacha3d/input/: gesture.py  touch_handler.ts  voice.py
kiacha3d/ui/: index.html  panel.js
models/: download.sh
os-image/: Makefile  README.md  build-efiboot.sh  build-initramfs.sh  build-iso.sh  build-kiacha-img.sh  create_cpio_newc.py  efiboot.img  initramfs.img  kiachaos.img  kiachaos.iso  rootfs.img
os-image/buildroot/board/kiacha/: grub.cfg  (+2 more)
os-image/buildroot/configs/: kiacha_defconfig
os-image/efi/: BOOTIA32.EFI  bootx64.efi  grubx64.efi  limine.efi  limine.sys
os-image/efiboot/: BOOTX64.EFI  grubx64.efi  limine.efi
os-image/initramfs-root/dev/: console  null
os-image/initramfs-root/proc/: README
os-image/initramfs-root/sbin/: init
os-image/initramfs-root/sys/: README
scripts/: build-all.sh  check-structure.sh  flash-usb.sh  run-qemu.sh
shared/proto/: kiacha.proto
src-tauri/: Cargo.toml  build.rs  package.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/embed/: mod.rs
(+8 files in other folders)
